[package]
authors = ["tragedyhk <alex99hk@gmail.com>"]
edition = "2018"
name = "data-struct"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-traits = "0.2"
num-derive = "0.3"
utility_plus_rs = { git = "https://github.com/tragedyhk/utility-plus-rs", branch = "main" }