[package]
authors = ["tragedyhk <alex99hk@gmail.com>"]
edition = "2018"
name = "offline"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
aes = "0.6.0"
aes-gcm = "0.8.0"
aes-gcm-siv = "0.9.0"
async-std = "1.6.5"
async-tls = "0.10.0"
async-trait = "0.1.41"
async-tungstenite = "0.9.1"
blake3 = "0.3.7"
clap = "2.33.0"
digest = "0.9.0"
failure = "0.1.8"
failure_derive = "0.1.8"
futures = "0.3.6"
hashbrown = "0.9.1"
jsonwebtoken = "7.2.0"
log = "0.4.8"
rand = "0.7.3"
rayon = "1.4.1"
regex = "1.4.1"
rust-crypto = "0.2.36"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
sha2 = "0.9.1"
thread_local = "1.0"
tokio = "0.3.0"
tokio-tungstenite = "0.11.0"
tungstenite = "0.11.0"
wasm-bindgen = "0.2.68"
